# autograde

./: AGENTS.md  README.md  pyproject.toml
specs/: spec-autograde.md
src/autograde/: __init__.py  cli.py
tests/: test_cli.py
