[project]
name = "autograde"
version = "0.1.0"
description = "CLI tool to validate repository grading requirements"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
autograde = "autograde.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
